<resources>
    <string name="app_name">Shipping Calculator</string>
    <string name="titleText">Weight of the package</string>
    <string name="ounceText">(in ounces)</string>
    <string name="baseCostText">Base Cost:</string>
    <string name="addedCostText">Added Cost:</string>
    <string name="totalText">Total Shipping Cost</string>
    <string name="costNumText">$0.00</string>
    <string name="addedCostNumText">$0.00</string>
    <string name="totalCostNumText">$0.00</string>
</resources>
